--- a/lookbook.html
+++ b/lookbook.html
@@ -52,6 +52,9 @@
             <ul>
                 
             </ul>
+            <div class='gallery'>
+                
+            </div>
         </section>
         <aside>
             <div>
