--- a/faq.html
+++ b/faq.html
@@ -53,7 +53,7 @@
         </section>
         <section class="content_box">
             <nav class="con_nav">
-                <a href="#" class="on">전체</a>
+                <a href="#" class="on" data-sort="all">전체</a>
                 <a href="#" data-sort="info">회원가입/정보</a>
                 <a href="#" data-sort="order">주문/결제</a>
                 <a href="#" data-sort="ship">배송</a>
