--- a/brand.html
+++ b/brand.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>La maison</title>
-    <link rel="stylesheet" href="css/brand.css">
-    <link rel="shortcur icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="asset/css/brand.css">
+    <link rel="shortcur icon" href="asset/img/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="asset/js/common.js"></script>
    
 </head>
 
@@ -61,8 +61,8 @@
                 그것이 라 메종의 철학입니다. </p>
             </div>
             <div class="img_box">
-                <span><img src="img/brand_thum1.jpg" alt="컬러 차트"></span>
-                <span><img src="img/brand_thum2.jpg" alt="드레스룸"></span>
+                <span><img src="asset/img/brand_thum1.jpg" alt="컬러 차트"></span>
+                <span><img src="asset/img/brand_thum2.jpg" alt="드레스룸"></span>
             </div>
             <ul>
                 <li>
@@ -97,12 +97,12 @@
                     </div>
                 </li>
             </ul>
-            <span><img src="img/brand_bottom.jpg"></span>
+            <span><img src="asset/img/brand_bottom.jpg"></span>
         </section>
         <aside>
             <div>
                 <span>
-                    <img src="img/icon_top.png">
+                    <img src="asset/img/icon_top.png">
                 </span>
                 <span>
                     TOP
@@ -110,7 +110,7 @@
             </div>
         </aside>
         <footer>
-            <h2><img src="img/sub_logo.png" alt="la maison"></h2>
+            <h2><img src="asset/img/sub_logo.png" alt="la maison"></h2>
             <ul>
                 <li>
                     <small>Customer Support</small>
