--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>La maison</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="shortcur icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="asset/css/index.css">
+    <link rel="shortcur icon" href="asset/img/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/index.js" ></script>
+    <script src="asset/js/index.js" ></script>
    
 </head>
 
 <body>
     <div class="wrap">
         <header>
-            <h1><a href="index.html"><img src="img/main_logo.png" alt="la maison"></a></h1>
+            <h1><a href="index.html"><img src="asset/img/main_logo.png" alt="la maison"></a></h1>
             <nav>
                 <div>
                     <a href="brand.html" data-num="0">about</a>
@@ -53,19 +53,19 @@
             <section class="con_main">
                 <strong>FOR <span>YOUR</span> LIFE</strong>
                 <p>어디에서나 느낄 수 있는 편안함,
-				<img src="img/sub_logo.png" alt="La maison"> 이 함께합니다.</p>
+				<img src="asset/img/sub_logo.png" alt="La maison"> 이 함께합니다.</p>
                 <a href="service.html" data-num="1">
                     <span>서비스 소개</span>
-                    <span><img src="img/icon_arrow_b.png"></span>
+                    <span><img src="asset/img/icon_arrow_b.png"></span>
                 </a>
-                <span><img src="img/icon_mouse.png"></span>
-                <span><img src="img/icon_scroll.png"></span>
+                <span><img src="asset/img/icon_mouse.png"></span>
+                <span><img src="asset/img/icon_scroll.png"></span>
             </section>
             <section class="con_about">
                 <ul class="about_detail">
                     <li class="on">
                         <figure>
-                            <img src="img/main_img_2_1.jpg">
+                            <img src="asset/img/main_img_2_1.jpg">
                             <figcaption>
                                 <em>nice</em>
                                 <p>
@@ -76,7 +76,7 @@
                     </li>
                     <li>
                         <figure>
-                            <img src="img/main_img_2_2.jpg">
+                            <img src="asset/img/main_img_2_2.jpg">
                             <figcaption>
                                 <em>easy</em>
                                 <p>
@@ -87,7 +87,7 @@
                     </li>
                     <li>
                         <figure>
-                            <img src="img/main_img_2_3.jpg">
+                            <img src="asset/img/main_img_2_3.jpg">
                             <figcaption>
                                 <em>better</em>
                                 <p>
@@ -109,7 +109,7 @@
                     </ul>
                     <a href="brand.html" data-num="0">
                         <span>브랜드 소개</span>
-                        <span><img src="img/icon_arrow_g.png"></span>
+                        <span><img src="asset/img/icon_arrow_g.png"></span>
                     </a>
                 </div>
             </section>
@@ -117,24 +117,24 @@
                 <div class="img_box">
                     <div class="img_slider">
                         <ul>
-                            <li><img src="img/main_img_3_3.jpg"></li>
-                            <li><img src="img/main_img_3_1.jpg"></li>
-                            <li><img src="img/main_img_3_2.jpg"></li>
-                            <li><img src="img/main_img_3_3.jpg"></li>
-                            <li><img src="img/main_img_3_1.jpg"></li>
+                            <li><img src="asset/img/main_img_3_3.jpg"></li>
+                            <li><img src="asset/img/main_img_3_1.jpg"></li>
+                            <li><img src="asset/img/main_img_3_2.jpg"></li>
+                            <li><img src="asset/img/main_img_3_3.jpg"></li>
+                            <li><img src="asset/img/main_img_3_1.jpg"></li>
                         </ul>
                     </div>
                     <div class="img_number"><em>01</em> <span>/</span> <em>03</em></div>
-                    <span><img src="img/icon_prev.png" alt="prev"></span>
-                    <span><img src="img/icon_next.png" alt="next"></span>
+                    <span><img src="asset/img/icon_prev.png" alt="prev"></span>
+                    <span><img src="asset/img/icon_next.png" alt="next"></span>
                 </div>
                 <div>
                     <strong><span>OUR</span> COLLECTION</strong>
                     <p>더 편안하고, 더 좋은 스타일을
-				    <img src="img/sub_logo.png" alt="La maison"> 이 제안합니다.</p>
+				    <img src="asset/img/sub_logo.png" alt="La maison"> 이 제안합니다.</p>
                     <a href="lookbook.html">
                         <span>룩북 보러가기</span>
-                        <span><img src="img/icon_arrow_b.png"></span>
+                        <span><img src="asset/img/icon_arrow_b.png"></span>
                     </a>
                 </div>
             </section>
@@ -182,7 +182,7 @@
         <aside>
             <div>
                 <span>
-                    <img src="img/icon_top.png">
+                    <img src="asset/img/icon_top.png">
                 </span>
                 <span>
                     TOP
@@ -190,7 +190,7 @@
             </div>
         </aside>
         <footer>
-            <h2><img src="img/sub_logo.png" alt="la maison"></h2>
+            <h2><img src="asset/img/sub_logo.png" alt="la maison"></h2>
             <ul>
                 <li>
                     <small>Customer Support</small>
