--- a/lookbook.html
+++ b/lookbook.html
@@ -6,19 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>La maison</title>
-    <link rel="stylesheet" href="css/lookbook.css">
-    <link rel="shortcur icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="asset/css/lookbook.css">
+    <link rel="shortcur icon" href="asset/img/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/common.js"></script>
-    <script src="js/lookbook.js"></script>
+    <script src="asset/js/common.js"></script>
+    <script src="asset/js/lookbook.js"></script>
    
 </head>
 
 <body>
     <div class="wrap">
         <header>
-            <h1><a href="index.html"><img src="img/main_logo.png" alt="la maison"></a></h1>
+            <h1><a href="index.html"><img src="asset/img/main_logo.png" alt="la maison"></a></h1>
             <nav>
                 <div>
                     <a href="brand.html">about</a>
@@ -59,7 +59,7 @@
         <aside>
             <div>
                 <span>
-                    <img src="img/icon_top.png">
+                    <img src="asset/img/icon_top.png">
                 </span>
                 <span>
                     TOP
@@ -67,7 +67,7 @@
             </div>
         </aside>
         <footer>
-            <h2><img src="img/sub_logo.png" alt="la maison"></h2>
+            <h2><img src="asset/img/sub_logo.png" alt="la maison"></h2>
             <ul>
                 <li>
                     <small>Customer Support</small>
