--- a/service.html
+++ b/service.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>La maison</title>
-    <link rel="stylesheet" href="css/service.css">
-    <link rel="shortcur icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="asset/css/service.css">
+    <link rel="shortcur icon" href="asset/img/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="asset/js/common.js"></script>
    
 </head>
 
 <body>
     <div class="wrap">
         <header>
-            <h1><a href="index.html"><img src="img/main_logo.png" alt="la maison"></a></h1>
+            <h1><a href="index.html"><img src="asset/img/main_logo.png" alt="la maison"></a></h1>
             <nav>
                 <div>
                     <a href="brand.html">about</a>
@@ -63,7 +63,7 @@
                 <ul>
                     <li>
                         <div>
-                            <img src="img/icon_service1.png">
+                            <img src="asset/img/icon_service1.png">
                         </div>
                         <span>01</span>
                         <em>옷장을 열고 몸에 가장 잘 맞는,
@@ -73,7 +73,7 @@
                     </li>
                     <li>
                         <div>
-                            <img src="img/icon_service2.png">
+                            <img src="asset/img/icon_service2.png">
                         </div>
                         <span>02</span>
                         <em>다음의 질문에 답해주세요.</em>
@@ -83,7 +83,7 @@
                     </li>
                     <li>
                         <div>
-                            <img src="img/icon_service3.png">
+                            <img src="asset/img/icon_service3.png">
                         </div>
                         <span>03</span>
                         <em>이제 라 메종이 고객님의 옷을 만듭니다.</em>
@@ -92,7 +92,7 @@
                     </li>
                     <li>
                         <div>
-                            <img src="img/icon_service4.png">
+                            <img src="asset/img/icon_service4.png">
                         </div>
                         <span>04</span>
                         <em>택배로 발송된 옷을 받아보세요.</em>
@@ -109,7 +109,7 @@
                 02-0000-0000로 전화 주시거나, 온라인으로 예약을 하실 수 있습니다.</p>
                 <a href="reservation.html" data-num="1">
                     <span>쇼룸 방문 예약하기</span>
-                    <span><img src="img/icon_arrow_b.png"></span>
+                    <span><img src="asset/img/icon_arrow_b.png"></span>
                 </a>
             </div>
             <div class="map">
@@ -137,7 +137,7 @@
         <aside>
             <div>
                 <span>
-                    <img src="img/icon_top.png">
+                    <img src="asset/img/icon_top.png">
                 </span>
                 <span>
                     TOP
@@ -145,7 +145,7 @@
             </div>
         </aside>
         <footer>
-            <h2><img src="img/sub_logo.png" alt="la maison"></h2>
+            <h2><img src="asset/img/sub_logo.png" alt="la maison"></h2>
             <ul>
                 <li>
                     <small>Customer Support</small>
