--- a/showroom.html
+++ b/showroom.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>La maison</title>
-    <link rel="stylesheet" href="css/showroom.css">
-    <link rel="shortcur icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="asset/css/showroom.css">
+    <link rel="shortcur icon" href="asset/img/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="asset/js/common.js"></script>
    
 </head>
 
 <body>
     <div class="wrap">
         <header>
-            <h1><a href="index.html"><img src="img/main_logo.png" alt="la maison"></a></h1>
+            <h1><a href="index.html"><img src="asset/img/main_logo.png" alt="la maison"></a></h1>
             <nav>
                 <div>
                     <a href="brand.html">about</a>
@@ -52,29 +52,29 @@
         </section>
         <section class="content_box">
             <div class="map">
-                <img src="img/map_img.jpg" alt="지도">
+                <img src="asset/img/map_img.jpg" alt="지도">
             </div>
             <div class="root">
                 <div class="subway">
                     <strong>지하철</strong>
                     <ul>
                         <li>
-                            <img src="img/campus_roadmap_1.png" alt="1">
+                            <img src="asset/img/campus_roadmap_1.png" alt="1">
                             <em></em>
                             <span></span>
                         </li>
                         <li>
-                            <img src="img/campus_roadmap_4.png" alt="4">
+                            <img src="asset/img/campus_roadmap_4.png" alt="4">
                             <em></em>
                             <span></span>
                         </li>
                         <li>
-                            <img src="img/campus_roadmap_6.png" alt="6">
+                            <img src="asset/img/campus_roadmap_6.png" alt="6">
                             <em></em>
                             <span></span>
                         </li>
                         <li>
-                            <img src="img/campus_roadmap_k.png" alt="경의중앙">
+                            <img src="asset/img/campus_roadmap_k.png" alt="경의중앙">
                             <em></em>
                             <span></span>
                         </li>
@@ -84,22 +84,22 @@
                     <strong>버스</strong>
                     <ul>
                         <li>
-                            <img src="img/campus_roadmap_g.png" alt="G">
+                            <img src="asset/img/campus_roadmap_g.png" alt="G">
                             <em></em>
                             <span></span>
                         </li>
                         <li>
-                            <img src="img/campus_roadmap_b.png" alt="B">
+                            <img src="asset/img/campus_roadmap_b.png" alt="B">
                             <em></em>
                             <span></span>
                         </li>
                         <li>
-                            <img src="img/campus_roadmap_t.png" alt="T">
+                            <img src="asset/img/campus_roadmap_t.png" alt="T">
                             <em></em>
                             <span></span>
                         </li>
                         <li>
-                            <img src="img/campus_roadmap_a.png" alt="A">
+                            <img src="asset/img/campus_roadmap_a.png" alt="A">
                             <em></em>
                             <span></span>
                         </li>
@@ -110,7 +110,7 @@
         <aside>
             <div>
                 <span>
-                    <img src="img/icon_top.png">
+                    <img src="asset/img/icon_top.png">
                 </span>
                 <span>
                     TOP
@@ -118,7 +118,7 @@
             </div>
         </aside>
         <footer>
-            <h2><img src="img/sub_logo.png" alt="la maison"></h2>
+            <h2><img src="asset/img/sub_logo.png" alt="la maison"></h2>
             <ul>
                 <li>
                     <small>Customer Support</small>
