--- a/showroom.html
+++ b/showroom.html
@@ -46,8 +46,8 @@
         <section class="content_tit">
             <h2>SHOWROOM</h2>
             <nav>
-                <a href="event.html" data-num="0" class="on">오시는 길 </a>
-                <a href="faq.html" data-num="1">방문 예약</a>
+                <a href="showroom.html" data-num="0" class="on">오시는 길 </a>
+                <a href="reservation.html" data-num="1">방문 예약</a>
             </nav>
         </section>
         <section class="content_box">
