--- a/showroom.html
+++ b/showroom.html
@@ -59,49 +59,51 @@
                     <strong>지하철</strong>
                     <ul>
                         <li>
-                            <img src="asset/img/campus_roadmap_1.png" alt="1">
-                            <em></em>
-                            <span></span>
+                            <div><img src="asset/img/campus_roadmap_1.png" alt="1"></div>
+                            <em>1호선</em>
+                            <span>남영역 : 1번 출구에서 도보 15~20분</span>
                         </li>
                         <li>
-                            <img src="asset/img/campus_roadmap_4.png" alt="4">
-                            <em></em>
-                            <span></span>
+                            <div><img src="asset/img/campus_roadmap_4.png" alt="4"></div>
+                            <em>4호선</em>
+                            <span>숙대입구역 : 10번 출구에서 도보 15분</span>
                         </li>
                         <li>
-                            <img src="asset/img/campus_roadmap_6.png" alt="6">
-                            <em></em>
-                            <span></span>
+                            <div><img src="asset/img/campus_roadmap_6.png" alt="6"></div>
+                            <em>6호선</em>
+                            <span>효창공원역 : 2번 출구에서 도보 15~20분</span>
                         </li>
                         <li>
-                            <img src="asset/img/campus_roadmap_k.png" alt="경의중앙">
-                            <em></em>
-                            <span></span>
+                            <div><img src="asset/img/campus_roadmap_k.png" alt="경의중앙"></div>
+                            <em>경의·중앙선</em>
+                            <span>효창공원역 : 4번 출구에서 도보 15~20분</span>
                         </li>
                     </ul>
                 </div>
                 <div class="bus">
-                    <strong>버스</strong>
+                    <strong>일반 버스</strong>
                     <ul>
                         <li>
-                            <img src="asset/img/campus_roadmap_g.png" alt="G">
-                            <em></em>
-                            <span></span>
+                            <div><img src="asset/img/campus_roadmap_g.png" alt="G"></div>
+                            <em>지선버스</em>
+                            <span>1711번(국민대 ↔ 공덕동), 7016번(은평차고지 ↔ 상명대), 2016번(중랑공영차고지 ↔ 효창공원후문)</span>
                         </li>
                         <li>
-                            <img src="asset/img/campus_roadmap_b.png" alt="B">
-                            <em></em>
-                            <span></span>
+                            <div><img src="asset/img/campus_roadmap_b.png" alt="B"></div>
+                            <em>간선버스</em>
+                            <span>400번(염곡동 ↔ 시청), 262번(중랑차고지 ↔ 여의도), 162번(정릉 ↔ 여의도), 503번(광명공영차고지 ↔ 서울역), 505번(노온사동 ↔ 서울역), 
+                            100번(하계동 ↔ 용산구청), 150번(도봉산역 ↔ 시흥대교), 151번(우이동 ↔ 중앙대), 152번(화계사 ↔ 삼막사사거리), 421번(염곡동차고지 ↔ 옥수동),
+                            501번(서울대학교 ↔ 종로2가)</span>
                         </li>
                         <li>
-                            <img src="asset/img/campus_roadmap_t.png" alt="T">
-                            <em></em>
-                            <span></span>
+                            <div><img src="asset/img/campus_roadmap_t.png" alt="T"></div>
+                            <em>마을버스</em>
+                            <span>용산04번(서부역 ↔ 서부역)</span>
                         </li>
                         <li>
-                            <img src="asset/img/campus_roadmap_a.png" alt="A">
-                            <em></em>
-                            <span></span>
+                            <div><img src="asset/img/campus_roadmap_a.png" alt="A"></div>
+                            <em>공항버스</em>
+                            <span>6001번(인천공항 ↔ 동대문)</span>
                         </li>
                     </ul>
                 </div>
