--- a/brand.html
+++ b/brand.html
@@ -17,7 +17,7 @@
 <body>
     <div class="wrap">
         <header>
-            <h1><a href="index.html"><img src="img/main_logo.png" alt="la maison"></a></h1>
+            <h1><a href="index.html"><img src="asset/img/main_logo.png" alt="la maison"></a></h1>
             <nav>
                 <div>
                     <a href="brand.html">about</a>
