--- a/bi.html
+++ b/bi.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>La maison</title>
-    <link rel="stylesheet" href="asset/css/brand.css">
+    <link rel="stylesheet" href="asset/css/bi.css">
     <link rel="shortcur icon" href="asset/img/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -20,10 +20,12 @@
             <h1><a href="index.html"><img src="asset/img/main_logo.png" alt="la maison"></a></h1>
             <nav>
                 <div>
-                    <a href="brand.html">about</a>
-                    <a href="lookbook.html">lookbook</a>
-                    <a href="event.html">community</a>
-                    <a href="showroom.html">showroom</a>
+                    <div class="menu_nav">
+                        <a href="brand.html">about</a>
+                        <a href="lookbook.html">lookbook</a>
+                        <a href="event.html">community</a>
+                        <a href="showroom.html">showroom</a>
+                    </div>
                     <div class="sub_menu">
                         <div>
                             <span></span>
@@ -52,7 +54,19 @@
             </nav>
         </section>
         <section class="content_box">
-            
+            <div class="con_text">
+                <p><strong>라 메종</strong>은 여성 맞춤 패션&amp;큐레이션 브랜드의 TOM입니다.</p>
+                <p>라 메종만의 철학과 좋은 옷을 만들고자 하는 연구, 맞춤 의상과 큐레이션 서비스를 통해 
+                여성복의 새로운 패러다임을 제시합니다.</p>
+            </div>
+            <div class="bi_img">
+                <img src="asset/img/bi_img.png" alt="라메종 로고">
+            </div>
+            <div class="con_text">
+                <p><strong>물</strong>은 생명, 태동, 변화와 동시에 안정, 부드러운 이미지를 나타냅니다.</p>
+                <p>로고에서는 클래식 블루 색상의 잔잔한 파도와 물결로 형상화하여 라 메종이 강조하는 편안함을 부각시켰고,
+                물에서 태어난 말은 라 메종이 이끌어나갈 여성복의 변화를 의미합니다. </p>
+            </div>
         </section>
         <aside>
             <div>
