--- a/reservation.html
+++ b/reservation.html
@@ -24,10 +24,12 @@
             <h1><a href="index.html"><img src="asset/img/main_logo.png" alt="la maison"></a></h1>
             <nav>
                 <div>
-                    <a href="brand.html">about</a>
-                    <a href="lookbook.html">lookbook</a>
-                    <a href="event.html">community</a>
-                    <a href="showroom.html">showroom</a>
+                    <div class="menu_nav">
+                        <a href="brand.html">about</a>
+                        <a href="lookbook.html">lookbook</a>
+                        <a href="event.html">community</a>
+                        <a href="showroom.html">showroom</a>
+                    </div>
                     <div class="sub_menu">
                         <div>
                             <span></span>
